--- a/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
+++ b/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
@@ -101,7 +101,84 @@
                     <Menu DockPanel.Dock="Top">
                         <MenuItem Header="获取移动巡检轨迹信息" Name="GetInspectionTrack" Click="GetInspectionTrack_Click"></MenuItem>
                     </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取人员列表" Name="GetUserList" Click="GetUserList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取部门列表" Name="GetorgList" Click="GetorgList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取区域列表" Name="GetzonesList" Click="GetzonesList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取单个区域信息" Name="GetSingleZonesInfo" Click="GetSingleZonesInfo_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取指定区域下设备列表" Name="GetZoneDevList" Click="GetZoneDevList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取设备列表" Name="GetDeviceList" Click="GetDeviceList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取单个设备信息" Name="GetSingleDeviceInfo" Click="GetSingleDeviceInfo_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取单台设备操作历史" Name="GetSingleDeviceActionHistory" Click="GetSingleDeviceActionHistory_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取门禁卡列表" Name="GetCardList" Click="GetCardList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取门禁卡操作历史" Name="GetSingleCardActionHistory" Click="GetSingleCardActionHistory_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取两票列表" Name="GetTicketsList" Click="GetTicketsList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取指定的两票详情" Name="GetTicketsDetail" Click="GetTicketsDetail_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取告警事件列表" Name="GeteventsList" Click="GeteventsList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取SIS传感数据" Name="GetSomesisList" Click="GetSomesisList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取SIS历史数据" Name="GetSomeSisHistoryList" Click="GetSomeSisHistoryList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取SIS采样历史数据" Name="GetSisSamplingHistoryList" Click="GetSisSamplingHistoryList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取巡检轨迹列表" Name="Getinspectionlist" Click="Getinspectionlist_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取巡检节点列表" Name="Getcheckpoints" Click="Getcheckpoints_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取巡检结果列表" Name="Getcheckresults" Click="Getcheckresults_Click"></MenuItem>
+                    </Menu>
+                    
+                    
                     <DataGrid Name="BasicDataPlatFormInfo"></DataGrid>
+                </DockPanel>
+            </TabItem>
+            <TabItem Header="区域列表">
+                <DockPanel>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取区域基本数据列表" Name="GetAreaBasicList" Click="GetAreaBasicList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取区域设备信息列表" Name="GetAreaDevInfoList" Click="GetAreaDevInfoList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取区域人员信息列表" Name="GetAreaPersonnelInfoList" Click="GetAreaPersonnelInfoList_Click"></MenuItem>
+                    </Menu>
+                    <Menu DockPanel.Dock="Top">
+                        <MenuItem Header="获取区域设备人员信息列表" Name="GetAreaDevPersonnelInfoList" Click="GetAreaDevPersonnelInfoList_Click"></MenuItem>
+                    </Menu>
+                    
+                    <DataGrid Name="AreaList"></DataGrid>
                 </DockPanel>
             </TabItem>
         </TabControl>
