--- a/Client/WPFWCFClient/WPFClientControlLib/AreaCanvas.xaml
+++ b/Client/WPFWCFClient/WPFClientControlLib/AreaCanvas.xaml
@@ -34,7 +34,7 @@
         <Grid>
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Name="ScrollViewer1">
                 <Border BorderBrush="Black" BorderThickness="1">
-                    <Canvas Name="Canvas1" Background="LightBlue">
+                    <Canvas Name="Canvas1" Background="LightBlue" MouseDown="Canvas1_MouseDown">
                         <Canvas.LayoutTransform>
                             <ScaleTransform  ScaleX="1" ScaleY="-1" x:Name="ScaleTransform1"></ScaleTransform>
                         </Canvas.LayoutTransform>
