--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -38,6 +38,7 @@
                 <MenuItem Header="基站搜索" Name="MenuArchorSearch" Click="MenuArchorSearch_OnClick"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="转义KKS编码" Name="OriginalKKSCode" Click="OriginalKKSCode_OnClick"></MenuItem>
+                <MenuItem Header="测量点列表" Name="MenuTrackPointList" Click="MenuTrackPointList_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="测试指令">
                 <MenuItem Header="区域统计" Name="MenuCmd1" Click="MenuCmd1_OnClick"></MenuItem>
