--- a/Server/WCFServer/LocationWCF/Windows/Simple/TrackPointWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/Simple/TrackPointWindow.xaml
@@ -1,32 +1,19 @@
-﻿<Window  x:Class="LocationServer.Windows.RoomArchorSettingWindow"
-        xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib" 
+﻿<Window xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"
+    x:Class="LocationServer.Windows.Simple.TrackPointWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LocationServer.Windows"
+        xmlns:local="clr-namespace:LocationServer.Windows.Simple"
         mc:Ignorable="d"
-        Title="机房基站设置" Height="380" Width="350" Topmost="True">
+        Title="定位测量点" Height="300" Width="350">
     <Grid>
         <StackPanel>
-            <Menu>
-                <MenuItem Header="详情" Name="MenuDetail" Click="MenuDetail_Click"></MenuItem>
-                <MenuItem Header="基站信息" Name="MenuArchorInfo" Click="MenuArchorInfo_OnClick"></MenuItem>
-                <MenuItem Header="基站列表" Name="MenuArchorList" Click="MenuArchorList_OnClick"></MenuItem>
-            </Menu>
             <DockPanel>
                 <Label Width="50" DockPanel.Dock="Left">Id</Label>
                 <TextBox Name="LbId" Width="50" IsEnabled="False"></TextBox>
                 <Label Width="100" DockPanel.Dock="Left">Name *</Label>
                 <TextBox Name="TbName"></TextBox>
-            </DockPanel>
-            <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">编号 *</Label>
-                <ComboBox Name="TbCode" KeyUp="TbCode_KeyUp" IsEditable="True" SelectionChanged="TbCode_SelectionChanged"></ComboBox>
-            </DockPanel>
-            <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">IP *</Label>
-                <ComboBox Name="IPCode1"  KeyUp="IPCode1_KeyUp" IsEditable="True" SelectionChanged="IPCode1_SelectionChanged"></ComboBox>
             </DockPanel>
             <DockPanel>
                 <Label Width="100" DockPanel.Dock="Left">建筑</Label>
@@ -82,7 +69,6 @@
             </DockPanel>
             <StackPanel>
                 <Button Name="BtnSave" Click="BtnSave_Click">保存</Button>
-                <!--<Button Name="BtnRefresh" Click="BtnRefresh_Click">刷新视图</Button>-->
             </StackPanel>
         </StackPanel>
     </Grid>
